--- a/docs/404.md
+++ b/docs/404.md
@@ -2,4 +2,4 @@
 permalink: /404.html
 ---
 
-The request page on dev.ludorge.net does not exist (404)
+The requested page on dev.ludorg.net does not exist (404)
