--- a/docs/404.md
+++ b/docs/404.md
@@ -2,4 +2,6 @@
 permalink: /404.html
 ---
 
-The requested page on dev.ludorg.net does not exist (404)
+# Not found
+
+The requested page on [dev.ludorg.net](dev.ludorg.net) does not exist (404)
