--- a/docs/404.md
+++ b/docs/404.md
@@ -4,4 +4,4 @@ permalink: /404.html
 
 # Not found
 
-The requested page on [dev.ludorg.net](dev.ludorg.net) does not exist (404)
+The requested page on [dev.ludorg.net](https://dev.ludorg.net) does not exist (404)
